Fix the color issue in CMYK jpeg images

This patch fixes the color issue in CMYK jpeg images.
It has a dependency on https://skia-review.googlesource.com/#/c/20000

BUG=727128

Change-Id: I370c7da13dd38e5efe1c8d9cb3d21a3fc024a975